Apache Tez Change Log
=====================

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3609. Improve ATSv15 performance for DAG entities read calls.
  TEZ-3244. Allow overlap of input and output memory when they are not concurrent
  TEZ-3601. Add another HistoryLogLevel to suppress TaskAttempts at specific levels
  TEZ-3582. Exception swallowed in PipelinedSorter causing incorrect results.
  TEZ-3462. Task attempt failure during container shutdown loses useful container diagnostics
  TEZ-3574. Container reuse won't pickup extra dag level local resource.
  TEZ-3566. Avoid caching fs isntances in TokenCache after a point.
  TEZ-3568. Update SecurityUtils configuration to pick user provided configuration.
  TEZ-3559. TEZ_LIB_URIS doesn't work with schemes different than the defaultFS
  TEZ-3549. TaskAttemptImpl does not initialize TEZ_TASK_PROGRESS_STUCK_INTERVAL_MS correctly
  TEZ-3537. ArrayIndexOutOfBoundsException with empty environment variables/Port YARN-3768 to Tez
  TEZ-3507. Task logs link when editing url from one task to another.
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3097. Flaky test: TestCommit.testDAGCommitStartedEventFail_OnDAGSuccess.
  TEZ-3487. Improvements in travis yml file to get builds to work.
  TEZ-3483. Create basic travis yml file for Tez.
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3317. Speculative execution starts too early due to 0 progress.